FAANG interview preparation & production scenario expansion across 7 academies
- Data Structures Academy: Enriched 35 core + 5 deep-dive INTERVIEW.md with LeetCode/NeetCode/FAANG mappings
- Algorithms Academy: Created 6 missing INTERVIEW.md (crypto, caching, game-theory, load-balancing, scheduling, optimization) + enriched 34 core labs
- Java Academy: Enriched 117 INTERVIEW.md (52 core + 65 deep-dive) with company-specific focus for Google, Microsoft, Meta, Amazon, Apple, Oracle + real production scenarios
- Backend Academy: Enriched 26 labs with FAANG Spring Boot/Jakarta EE interview prep
- Oracle APEX Academy: Enriched 8 INTERVIEW.md + created 8 PRODUCTION_SCENARIO.md
- Oracle EBS Academy: Enriched 10 INTERVIEW.md + created 10 PRODUCTION_SCENARIO.md
- Databases Academy: Enriched 22 INTERVIEW.md + created 22 PRODUCTION_SCENARIO.md
- New Academy: Created labs/real-production-scenarios/ with 15 standalone incident-response labs (105 files) covering Java memory leaks, deadlocks, high CPU, connection pool exhaustion, slow queries, deployment rollbacks, circuit breakers, cache stampede, disk incidents, security, TLS expiry, K8s crashloop, Kafka lag, rate limiting, and DR failover